Mise en ligne SMS Sender

--- a/.env
+++ b/.env
@@ -39,3 +39,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/twilio-notifier ###
+#Ici vous allez saisir vos identifiants Twilio
+
+
+###< symfony/twilio-notifier ###
