--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
+            "phpstan/extension-installer": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -76,6 +77,11 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
+        "fixer-local": "vendor/bin/php-cs-fixer fix",
+        "phpstan-local": "vendor/bin/phpstan analyse -c phpstan-local.neon",
+        "local-check": [
+            "@fixer-local"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
@@ -98,6 +104,8 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.72",
+        "phpstan/extension-installer": "^1.4",
         "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
